# briskbf

./: .gitignore  CMakeLists.txt  README.md  brainfuck.sln  brainfuck.vcxproj  brainfuck.vcxproj.filters  briskbf.sln  briskbf.vcxproj  briskbf.vcxproj.filters  globals.hpp  interpreter.cpp  interpreter.hpp  main.cpp  tokenizer.cpp  tokenizer.hpp
.github/workflows/: msbuild.yml
include/: globals.hpp  interpreter.hpp  tokenizer.hpp
scripts/: calc.bf
src/: interpreter.cpp  main.cpp  tokenizer.cpp
